Fixes CSS for node cell aligning
Fixes also node cell drop target border size.

--- a/ui/dom-explorer.reel/dom-explorer.css
+++ b/ui/dom-explorer.reel/dom-explorer.css
@@ -36,47 +36,3 @@
 .DomExplorer.shift .NodeList{
     margin-top: 0px;
 }
-
-/* AddElement --------------------------- */
-
-.AddElement {
-    position: relative;
-    padding: 5px 0 0 5px;
-}
-
-.AddElement-input {
-    width: 120px;
-    height: 24px;
-    border-color: hsl(0, 0%, 77%);
-    background-color: hsla(0, 0%, 0%, .04);
-    box-shadow: inset 0 1px 2px hsla(0, 0%, 0%, 0.08), 0 1px 0 hsla(0, 0%, 100%, .6);
-}
-
-.AddElement .AddElement-submit {
-    height: 24px;
-}
-
-.AddElement-reset.matte-Button {
-    position: absolute;
-    width: 34px;
-    height: 34px;
-    min-width: auto;
-    margin: 0;
-    padding: 0;
-    border-radius: 0;
-    border: none;
-    background: transparent;
-    top: 0;
-    right: 0;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.AddElement-reset.matte-Button:hover {
-    background: hsla(0,0%,0%,.1)
-}
-
-.AddElement-reset.matte-Button:active {
-    color: white;
-    background: hsla(0,0%,0%,.8)
-}
