--- a/ui/dom-explorer.reel/node-cell.reel/node-cell.css
+++ b/ui/dom-explorer.reel/node-cell.reel/node-cell.css
@@ -16,6 +16,7 @@
     font-size: 0;
     border-radius: 22px;
     background: hsl(0,0%,90%);
+    padding: 1px;
     border: 1px solid hsla(0,0%,0%,.08);
 }
 
@@ -56,7 +57,7 @@
     border-radius: 0 11px 11px 0;
     font-weight: bold;
     color: hsla(0, 0%, 0%, 0.64);
-    border-left: 1px solid hsl(210, 100%, 84%);
+    border-left: 2px solid hsl(210, 100%, 84%);
     background: hsl(210, 100%, 90%);
 }
 
@@ -66,8 +67,15 @@
 }
 
 .NodeCell--dropTarget .NodeCell-segment {
+    padding: 0px;
+    border: 2px;
     border-style: dashed;
     border-color: hsl(216,100%,70%);
+}
+
+
+.NodeCell--noChildren .NodeCell{
+    padding-left: 22px;
 }
 
 
@@ -90,8 +98,6 @@
 .NodeCell .montage-Text {
     white-space: nowrap;
 }
-
-
 
 
 /* Remove Button ---------------------------- */
@@ -181,15 +187,6 @@
 }
 
 /* Add tree elements -------------- */
-.addElement .add-element{
-    margin-left: 10px;
-    padding: 0px;
-}
 .addElement .add-element.child {
-    padding-left: 24px;
-}
-.addElement {
-    padding: 2px 0px;
-    margin: 0px;
-    background: hsl(0,0%,96%);
+    padding-left: 44px;
 }
